Updates from Overleaf

--- a/cv_for_XRP21_2pg.tex
+++ b/cv_for_XRP21_2pg.tex
@@ -8,7 +8,6 @@
 \usepackage{hyperref}
 \usepackage[usenames,dvipsnames]{color}
 %\usepackage[dvipsnames]{xcolor}
-\usepackage[bottom]{footmisc}
 
 \definecolor{MidnightBlue}{RGB}{10,82,131} % This replaces the need for xcolor package
 
@@ -32,24 +31,6 @@
 }{
     \end{enumerate}
 }
-
-% Add fancy footer line with circled page number
-\usepackage{fancyhdr}
-\usepackage{lipsum}
-\usepackage{tikz}
-\pagestyle{fancy}
-\fancyhf{}
-\newcommand*\circled[1]{\tikz[baseline]{\node[shape=circle,draw,inner sep=2pt, line width=1pt] (char) {#1};}}
-\fancyfoot[C]{\moveleft\hoffset \hbox{\vbox{\hrule width 0.465\resumewidth height 1pt} \hspace{-2.5mm} \protect\circled{\thepage} \hspace{-2.5mm} \vbox{\hrule width 0.44\resumewidth height 1pt}}}
-%\fancyfoot[C]{\moveleft\hoffset \hbox{\vbox{\hrule width 0.465\resumewidth height 0pt} \hspace{-2.5mm} \protect\circled{\thepage} \hspace{-2.5mm} \vbox{\hrule width 0.465\resumewidth height 0pt}}}
-\renewcommand{\headrulewidth}{0pt}% Line at the header invisible
-\footskip = 5pt
-
-\def\ps@lastpage{%
-  \let\@oddhead\@empty\let\@evenhead\@empty%
-  \def\@oddfoot{{\slshape\myrev}\hfil\thepage}%
-  \def\@evenfoot{{\slshape\myrev}\hfil\thepage}%
-  }
 
 \begin{document}
 
@@ -119,24 +100,6 @@ University of California, Santa Cruz, CA \\
                     %    \item Applied Bayesian methods for parameter estimation 
                     %    \item Calculated and published weighted mean opacities for substellar and planetary atmospheres\\
                     %\end{itemize} 
-   
-\section{Teaching \\Experience} 
-                {\sl Research Mentor}: Department of Astronomy, University of Washington \hfill (Sept 2016 -- Present)\\
-                Advising undergraduate students in exoplanet astronomy and astrobiology research\\
-                \\
-                %    \begin{itemize}  \itemsep -1pt %reduce space between items
-                %        \item Guadalupe Tovar (UW Undergraduate)
-                %    \end{itemize}
-                {\sl Teaching Assistant}: Department of Astronomy, University of Washington   \hfill          (Sept 2014 -- June 2015)\\
-                Led two biweekly sections for undergraduate students
-                    \begin{itemize}  \itemsep -1pt %reduce space between items
-                        \item ASTR 101 (Spring 2015; Autumn 2014)
-                        \item ASTR 150 (Winter 2015)
-                    \end{itemize}  
-                
-                {\sl Math \& Writing Tutor}: Learning Support Services, UCSC   \hfill          (Sept 2010 -- June 2012)\\
-                Instructed students in college level mathematics and writing as a group and drop-in tutor\\
-                 
                                   
 \section{Honors, Awards, \& Funded Proposals}
                  \begin{itemize}  \itemsep -1pt %reduce space between items
@@ -146,33 +109,18 @@ University of California, Santa Cruz, CA \\
                     \item Honors undergraduate thesis in physics (2013)
                     \item University Honor, \textit{cum laude} at University of California, Santa Cruz (2013)\\
                  \end{itemize}  
-                 
-\section{Technical \\Skills} 
-                \begin{itemize}  \itemsep -1pt %reduce space between items
-                    \item Programming in Python, Julia, IDL, \& Fortran
-                    \item Packaging Python code for open-source distribution
-                    \item Bayesian parameter inference and model selection 
-                    \item Version control and collaboration with git \& GitHub
-                    \item Data visualization with Matplotlib, Tableau, \& Bokeh  
-                    \item Writing and typesetting with \LaTeX 
-                    \item Extensive experience with MS Office Suite \\
-                \end{itemize}
 
-\section{Publications} 
-                {\sl First Authored}
-                \begin{benumerate}{5}
-                    \item \textbf{Lustig-Yaeger, J.}, Stevenson, K. B., Mayorga, L. C., Sotzen, K. S., May, E. M., Izenberg, N. R., \& Mandt, K. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021arXiv211002247L/abstract}{``Retrieving Exoplanet Atmospheres using Planetary Infrared Excess: Prospects for the Night side of WASP-43 b and other Hot Jupiters''}. \textit{The Astrophysical Journal Letters}.
+\section{Selected Publications} 
+                %{\sl First Authored}
+                \begin{itemize}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the Cosmic Shoreline: Venus-like Clouds as a Statistical False Positive for Exoplanet Atmospheric Erosion''}. \textit{The Astrophysical Journal Letters}, 887(1), L11. 
                     \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
-                \end{benumerate}
-                {\sl Co-Authored}
-                \begin{benumerate}{19}
-                    \item Komacek, T. D., Kang, W., \textbf{Lustig-Yaeger, J.}, \& Olson, S. L. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021arXiv210808386K/abstract}{``Constraining the Climates of Rocky Exoplanets''}. \textit{Elements}, 17, 4.
-                    \item Mayorga, L. C., \textbf{Lustig-Yaeger, J.}, May, E. M., Sotzen, K. S., Gonzalez-Quiles, J., et al. (2021) \href{https://ui.adsabs.harvard.edu/abs/2021PSJ.....2..140M/abstract}{``Transmission Spectroscopy of the Earth-Sun System to Inform the Search for Extrasolar Life''}. \textit{The Planetary Science Journal}, 2(4), 140. 
+                \end{itemize}
+                %{\sl Co-Authored}
+                \begin{itemize}
                     \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., \& Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
-                    \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2021, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.5151M/abstract}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. \textit{Monthly Notices of the Royal Astronomical Society}.
                     \item Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}, 160(1), 11. 
                     \item Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.495..962C/abstract}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}, 495(1), 962-970.
@@ -180,68 +128,27 @@ University of California, Santa Cruz, CA \\
                     \item Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Meadows, V. S.  (2019). \href{https://doi.org/10.3847/1538-3881/ab2385}{``Observing Isotopologue Bands in Terrestrial Exoplanet Atmospheres with the James Webb Space Telescope---Implications for Identifying Past Atmospheric and Ocean Loss''}. \textit{The Astronomical Journal}, 158(1), 26.
                     \item Luger, R., Agol, E., Foreman-Mackey, D., Fleming, D. P., \textbf{Lustig-Yaeger, J.}, \& Deitrick, R. (2019).  \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1810.06559}{``STARRY: Analytic Occultation Light Curves''}. \textit{The Astronomical Journal}, 157(2), 64.
                     \item Lincowski, A. P., Meadows, V. S., Crisp, D., Robinson, T. D., Luger, R., \textbf{Lustig-Yaeger, J.}, \& Arney, G.N. (2018). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1809.07498}{``Evolved Climates and Observational Discriminants for the TRAPPIST-1 Planetary System''}. \textit{The Astrophysical Journal}, 867(1), 76.
-                    \item Meadows, V. S.,  Reinhard, C. T., Arney, G. N., Parenteau, M. N., Schwieterman, E. W., Domagal-Goldman, S. D., Lincowski, A. P., Stapelfeldt, K. R., Rauer, H., DasSarma, S., Hegde, S., Narita, N., Deitrick, R., \textbf{Lustig-Yaeger, J.}, Lyons, T. W., \& Siegler, N. (2018).  \href{http://adsabs.harvard.edu/abs/2018AsBio..18..630M}{``Exoplanet Biosignatures:  Understanding Oxygen as a Biosignature in the Context of Its Environment''}. \textit{Astrobiology}, 18, 630-662.
                     \item Meadows, V. S., Arney, G. N., Schwieterman, E. W., \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., Robinson, T.,  Domagal-Goldman, S. D., Barnes, R. K., Fleming, D. P., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Crisp, D. (2018). \href{http://adsabs.harvard.edu/abs/2018AsBio..18..133M}{``The Habitability of Proxima Centauri b: Environmental States and Observational Discriminants''}. \textit{Astrobiology}, 18, 133-189.
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, \& Agol, E. (2017).  \href{http://adsabs.harvard.edu/abs/2017ApJ...851...94L}{``Planet-Planet Occultations in TRAPPIST-1 and Other Exoplanet Systems''}. \textit{The Astrophysical Journal}, 851(2), 94.
                     \item Fujii, Y., \textbf{Lustig-Yaeger, J.}, \& Cowan, N. B. (2017). \href{http://adsabs.harvard.edu/abs/2017arXiv170804886F}{``Rotational Spectral Unmixing of Exoplanets: Degeneracies between Surface Colors and Geography''}. \textit{The Astronomical Journal}, 154(5), 189.
                     \item Luger, R., \textbf{Lustig-Yaeger, J.}, Fleming, D. P., Tilley, M. A., Agol, E, Meadows, V. S., Deitrick, R., \& Barnes, R. (2017). \href{http://adsabs.harvard.edu/abs/2017ApJ...837...63L}{``The Pale Green Dot: A Method to Characterize Proxima Centauri b using Exo-Aurorae''}. \textit{The Astrophysical Journal}, 837, 63.
-                    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}
-                    \item Greene, T. P., Line, M. R., Montero, C., Fortney, J. J., \textbf{Lustig-Yaeger, J.}, \& Luther, K. (2016). \href{http://adsabs.harvard.edu/abs/2016ApJ...817...17G}{``Characterizing transiting exoplanet atmospheres with JWST''}. \textit{The Astrophysical Journal}, 817(1), 17.
                     \item Freedman, R. S., \textbf{Lustig-Yaeger, J.}, Fortney, J. J., Lupu, R. E., Marley, M. S., \& Lodders, K. (2014). \href{http://adsabs.harvard.edu/abs/2014ApJS..214...25F}{``Gaseous Mean Opacities for Giant Planet and Ultracool Dwarf Atmospheres over a Range of Metallicities and Temperatures''}. \textit{The Astrophysical Journal Supplement Series}, 214(2), 25.\\
-                \end{benumerate}
+                \end{itemize}
                 %{\sl Non-Peer Reviewed}
                 %\begin{benumerate}{1}
                 %    \item Barnes, R., Deitrick, R., Luger, R., Driscoll, P. E., Quinn, T. R., Fleming, D. P., Arney, G., Crisp, D., Domagal-Goldman, S. D., Lincowski, A. P., \textbf{Lustig-Yaeger, J.}, \& Schwieterman, E. (2017). \href{http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1608.06919}{``The Habitability of Proxima Centauri b I: Evolutionary Scenarios''}. \textit{arXiv preprint arXiv:1608.06919.}\\
                 %\end{benumerate}
                  
                  
-\section{Conference \\Presentations} 
+\section{Selected Conference Presentations} 
                 {\sl Invited Talks}
-                \begin{benumerate}{4}
+                \begin{itemize}
                     \item \textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019). 
                     \href{https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/639372}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, Joint AGU-AAS Session on Frontiers in Exoplanets, San Francisco, CA, 10 Dec. \href{https://www.youtube.com/watch?v=DDPguEQPPos}{\textit{Watch it on YouTube!}}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://exoplanets.nasa.gov/exep/events/270/exopag-20/}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. ExoPAG 20, Bellevue, WA, 23 Jun.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Tovar, G., Schwieterman, E., \& Fujii, Y.\ ``Prospects for Mapping Terrestrial Exoplanets with LUVOIR''. Goddard Space Flight Center, October 25, 2017
-                \end{benumerate}
-                {\sl Contributed Talks}
-                \begin{benumerate}{7}
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://docs.google.com/viewer?url=https://agu.confex.com/agu/abscicon19/mediafile/ExtendedAbstract/Paper481632/JLY_AbSciCon2019_Abstract3.pdf}{``TRAPPIST-1 and Beyond: Strategies for Characterizing Terrestrial Exoplanets and their Habitability''}. Abstract [202-7] presented at 2019 Astrobiology Science Conference, Bellevue, WA, 24-28 June. 
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). ``Detecting and Characterizing Terrestrial Atmospheres in the TRAPPIST-1 System with JWST''. TRAPPIST-1 Conference, Li\`ege, Belgium, 11-14 Jun. 
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{http://adsabs.harvard.edu/abs/2019AAS...23310303L}{``Simulating the Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. American Astronomical Society Meeting Abstracts, 233, \#103.03
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar, G., Schwieterman, E., W., Fujii, Y., Luger, R., \& Robinson, T. D.\ (2018). \href{https://agu.confex.com/agu/fm18/prelim.cgi/Paper/384157}{``Detecting Oceans on Exoplanets with Next-Generation Telescopes''}. 2018 AGU Fall Meeting, Washington, D.C., 10-14 Dec. P51B-09
-                    \item \textbf{Lustig-Yaeger, J.}, Luger, R., \& Agol, E. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4100.pdf}{``Probing the Orbital Dynamics and Atmospheric Properties of the TRAPPIST-1 Planets with JWST''}. Habitable Worlds 2017, \#4100
-                    \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Fujii, Y., Schwieterman, E., \& Meadows, V.\ (2017). \href{http://www.lpi.usra.edu/meetings/abscicon2017/pdf/3558.pdf}{``Mapping Surfaces and Clouds on Terrestrial Exoplanets Observed with Next-Generation Coronagraph-Equipped Telescopes''}. Astrobiology Science Conference, \#3558
-                    \item \textbf{Lustig-Yaeger, J.}, Line, M.~R., \& Fortney, J.~J.\ (2015). \href{http://adsabs.harvard.edu/abs/2015AAS...22512403L}{``On the Confidence of Molecular Detections in the Atmospheres of Exoplanets from Secondary Eclipse Spectra''}. American Astronomical Society Meeting Abstracts, 225, \#124.03\\ 
-                \end{benumerate}
-                
-                {\sl Posters}
-                \begin{benumerate}{8}  
-                    \item \textbf{Lustig-Yaeger, J.}, Lincowski, A. P., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4098.pdf}{``Extending Atmospheric Characterization to Earth-Sized Exoplanets with JWST: Transits, Eclipses, and the TRAPPIST-1 System''}. Habitable Worlds 2017, Laramie, WY \#4098
-                    \item \textbf{Lustig-Yaeger, J.}, Tovar, G., Schwieterman, E. W., Fujii, Y., \& Meadows, V. S. (2017). \href{https://www.hou.usra.edu/meetings/habitableworlds2017/pdf/4110.pdf}{``Detecting Oceans on Exoplanets Using Phase-Dependent Mapping with Next-Generation Coronagraph-Equipped Telescopes''}. Habitable Worlds 2017, Laramie, WY \#4110
-                    \item \textbf{Lustig-Yaeger, J.}, Schwieterman, E., Meadows, V., \& Fujii, Y. (2016). \href{http://adsabs.harvard.edu/abs/2016DPS....4812234L}{``Modeling Earth's Disk-Integrated, Time-Dependent Spectrum: Applications to Directly Imaged Habitable Planets''}. AAS/Division for Planetary Sciences Meeting Abstracts, 48, \#122.34
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Schwieterman, E. W., \& Robinson, T. (2016). \href{http://www.exoplanetscience.org/speakers}{``Modeling Earth’s Disk-Integrated Spectrum through a Lunar Month: 
-                    Applications to Directly Imaged Habitable Exoplanets''}. Exoplanets I
-                    \item \textbf{Lustig-Yaeger, J.}, Meadows, V., Line, M., \& Crisp, D.\ (2015). \href{http://adsabs.harvard.edu/abs/2015DPS....4741610L}{``A Novel Approach to Atmospheric Retrieval for Small Exoplanets''}. AAS/Division for Planetary Sciences Meeting Abstracts, 47, \#416.10
-                    \item \textbf{Lustig-Yaeger, J.}, Line, M., Fortney, J.~J., \& Meadows, V.\ (2015). \href{http://www.hou.usra.edu/meetings/abscicon2015/pdf/7558.pdf}{``Detecting Molecules in Exoplanet Atmospheres: Lessons Learned from Hot Jupiters''}. Astrobiology Science Conference, \#7558
-                    \item \textbf{Lustig-Yaeger, J.},  Line, M.~R., \& Fortney, J.~J.\ (2014). \href{http://www2.lowell.edu/workshops/coolstars18/abstracts-posters/poster-abstract-267.html}{``On the Detection Significance of Molecules in Exoplanets from Secondary Eclipse Observations''}. Cool Stars, 18, \#267
-                    \item \textbf{Lustig-Yaeger, J.}, Fortney, J.~J., Freedman, R., Marley, M.~S., \& Lupu, R.~E.\ (2014). \href{http://adsabs.harvard.edu/abs/2014AAS...22334704L}{``Gaseous Mean Opacities for Giant Planet and Brown Dwarf Atmospheres''}. American Astronomical Society Meeting Abstracts \#223, \#347.04\\
-                 \end{benumerate}
-                 
- \section{Public Talks}
-                \begin{itemize}  
-                    \item ``Proxima Centauri b: A World of Possibilities'' and panel discussion with Guillem Anglada-Escude, Rory Barnes, \& Olivier Guyon, UW Astrobiology \& the NASA Astrobiology Institute Lecture Series, Seattle, WA. May 3, 2017.
-                    \item ``BREAKING: Terrestrial Exoplanet Discovered in the Habitable Zone of Proxima Centauri'' Astronomy on Tap, Peddler Brewing Company, Seattle, WA. August 24, 2016.\\
-                 \end{itemize}
-                 
-\section{Press}
-                \begin{itemize}  
-                    \item University of Washington, Seattle. (2019, August 13). \href{https://www.washington.edu/news/2019/08/13/james-webb-space-telescope-could-begin-learning-about-trappist-1-atmospheres-in-a-single-year-study-indicates/}{``James Webb Space Telescope could begin learning about TRAPPIST-1 atmospheres in a single year, study indicates''} [Press release]. 
-                 \end{itemize}
-
-%\AtEndDocument{\vfill%
-\hfill \textit{Last updated on \today}
-%}
+                \end{itemize}
 
 \end{resume}
 \end{document}
