Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -87,11 +87,11 @@ PhD in Astronomy \& Astrobiology (dual-titled PhD) \hfill (2014 -- 2020) \\
 MS in Astronomy (2016) \\
 University of Washington, Seattle, WA  \\
 \textit{Thesis:} \href{https://digital.lib.washington.edu/researchworks/handle/1773/46370}{``The Detection, Characterization, and Retrieval of Terrestrial Exoplanet Atmospheres''} \\
-\textit{Advisor:} Victoria Meadows 
+\textit{Advisor:} Professor Victoria Meadows 
 
 BS in Physics (Honors), Minor in Mathematics \hfill (2009 -- 2013) \\
 University of California, Santa Cruz, CA \\
-\textit{Advisor:} Jonathan Fortney \\
+\textit{Advisor:} Professor Jonathan Fortney \\
 
 \section{Research \\Interests}
                 \begin{itemize}  \itemsep -1pt %reduce space between items
@@ -160,8 +160,9 @@ University of California, Santa Cruz, CA \\
 
 \section{Publications} 
                 {\sl First Authored}
-                \begin{benumerate}{5}
-                    \item \textbf{Lustig-Yaeger, J.}, Stevenson, K. B., Mayorga, L. C., Sotzen, K. S., May, E. M., Izenberg, N. R., \& Mandt, K. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021arXiv211002247L/abstract}{``Retrieving Exoplanet Atmospheres using Planetary Infrared Excess: Prospects for the Night side of WASP-43 b and other Hot Jupiters''}. \textit{The Astrophysical Journal Letters}.
+                \begin{benumerate}{6}
+                    \item \textbf{Lustig-Yaeger, J.}, Sotzen, K. S., Stevenson, K. B., Luger, R., May, E. M., Mayorga, L. C., Mandt, K., \& Izenberg, N. R. (2022). \href{https://ui.adsabs.harvard.edu/abs/2022arXiv220200701L/abstract}{``Hierarchical Bayesian Atmospheric Retrieval Modeling for Population Studies of Exoplanet Atmospheres: A Case Study on the Habitable Zone''}. \textit{The Astronomical Journal}.
+                    \item \textbf{Lustig-Yaeger, J.}, Stevenson, K. B., Mayorga, L. C., Sotzen, K. S., May, E. M., Izenberg, N. R., \& Mandt, K. (2021). \href{https://doi.org/10.3847/2041-8213/ac2cc2}{``Retrieving Exoplanet Atmospheres using Planetary Infrared Excess: Prospects for the Night side of WASP-43 b and other Hot Jupiters''}. \textit{The Astrophysical Journal Letters}, 921(1), L4.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the Cosmic Shoreline: Venus-like Clouds as a Statistical False Positive for Exoplanet Atmospheric Erosion''}. \textit{The Astrophysical Journal Letters}, 887(1), L11. 
                     \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/1538-3881/ab21e0}{``The Detectability and Characterization of the TRAPPIST-1 Exoplanet Atmospheres with JWST''}. \textit{The Astronomical Journal}, 158(1), 27.
