--- a/cv.tex
+++ b/cv.tex
@@ -141,7 +141,7 @@ University of California, Santa Cruz, CA \\
 \section{Honors, Awards, \& Funded Proposals}
                  \begin{itemize}  \itemsep -1pt %reduce space between items
                     %\item Astrobiology Fellow at University of Washington Astrobiology Program (2014)
-                    \item \textbf{JWST Cycle 1 Co-PI:} \href{https://www.stsci.edu/jwst/science-execution/program-information?id=1981}{``Tell Me How I’m Supposed To Breathe With No Air: Measuring the Prevalence and Diversity of M-Dwarf Planet Atmospheres''} (2021)
+                    \item \textbf{JWST Cycle 1 Co-PI:} \href{https://www.stsci.edu/jwst/science-execution/program-information?id=1981}{``Tell Me How I'm Supposed To Breathe With No Air: Measuring the Prevalence and Diversity of M-Dwarf Planet Atmospheres''} (2021)
                     \item \textbf{NASA Group Achievement Award:} LUVOIR Mission Concept Study Team (2019)
                     \item Honors undergraduate thesis in physics (2013)
                     \item University Honor, \textit{cum laude} at University of California, Santa Cruz (2013)\\
@@ -161,7 +161,7 @@ University of California, Santa Cruz, CA \\
 \section{Publications} 
                 {\sl First Authored}
                 \begin{benumerate}{6}
-                    \item \textbf{Lustig-Yaeger, J.}, Sotzen, K. S., Stevenson, K. B., Luger, R., May, E. M., Mayorga, L. C., Mandt, K., \& Izenberg, N. R. (2022). \href{https://ui.adsabs.harvard.edu/abs/2022arXiv220200701L/abstract}{``Hierarchical Bayesian Atmospheric Retrieval Modeling for Population Studies of Exoplanet Atmospheres: A Case Study on the Habitable Zone''}. \textit{The Astronomical Journal}.
+                    \item \textbf{Lustig-Yaeger, J.}, Sotzen, K. S., Stevenson, K. B., Luger, R., May, E. M., Mayorga, L. C., Mandt, K., \& Izenberg, N. R. (2022). \href{https://doi.org/10.3847/1538-3881/ac5034}{``Hierarchical Bayesian Atmospheric Retrieval Modeling for Population Studies of Exoplanet Atmospheres: A Case Study on the Habitable Zone''}. \textit{The Astronomical Journal}, 163(3), 140. 
                     \item \textbf{Lustig-Yaeger, J.}, Stevenson, K. B., Mayorga, L. C., Sotzen, K. S., May, E. M., Izenberg, N. R., \& Mandt, K. (2021). \href{https://doi.org/10.3847/2041-8213/ac2cc2}{``Retrieving Exoplanet Atmospheres using Planetary Infrared Excess: Prospects for the Night side of WASP-43 b and other Hot Jupiters''}. \textit{The Astrophysical Journal Letters}, 921(1), L4.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the Cosmic Shoreline: Venus-like Clouds as a Statistical False Positive for Exoplanet Atmospheric Erosion''}. \textit{The Astrophysical Journal Letters}, 887(1), L11. 
                     \item \textbf{Lustig-Yaeger, J.}, Robinson, T. D., \& Arney, G. (2019). \href{https://doi.org/10.21105/joss.01387}{``\texttt{coronagraph}: Telescope Noise Modeling for Exoplanets in Python''}. \textit{Journal of Open Source Software}, 4(40), 1387.
@@ -169,11 +169,14 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
-                \begin{benumerate}{19}
+                \begin{benumerate}{21}
+                    %\item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2022, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
+                    \item Mandell, A. M., \textbf{Lustig-Yaeger, J.,} Stevenson, K., \& Staguhn, J. (2022). \href{https://doi.org/10.3847/1538-3881/ac83a5}{``MIRECLE: Science Yield for a Mid-IR Explorer-Class Mission to Study Non-Transiting Rocky Planets Orbiting the Nearest M-Stars Using Planetary Infrared Excess''}. \textit{The Astronomical Journal}, 164, 176. 
+                    \item Mandt, K., Luspay-Kuti, A., \textbf{Lustig-Yaeger, J.,} Felton, R., \& Domagal-Goldman, S. (2022). \href{https://iopscience.iop.org/article/10.3847/1538-4357/ac59bb}{``TRAPPIST-1h as an Exo-Titan. I. The Role of Assumptions about Atmospheric Parameters in Understanding an Exoplanet Atmosphere''}. \textit{The Astrophysical Journal}, 930(1), 73. 
+                    \item Wood, B. E., Hess, P., \textbf{Lustig‐Yaeger, J.}, Gallagher, B., Korwan, D., Rich, N., et al. (2022). \href{https://doi.org/10.1029/2021GL096302}{``Parker Solar Probe imaging of the night side of Venus''}. \textit{Geophysical Research Letters}, 49(3), e2021GL096302. 
                     \item Komacek, T. D., Kang, W., \textbf{Lustig-Yaeger, J.}, \& Olson, S. L. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021arXiv210808386K/abstract}{``Constraining the Climates of Rocky Exoplanets''}. \textit{Elements}, 17, 4.
                     \item Mayorga, L. C., \textbf{Lustig-Yaeger, J.}, May, E. M., Sotzen, K. S., Gonzalez-Quiles, J., et al. (2021) \href{https://ui.adsabs.harvard.edu/abs/2021PSJ.....2..140M/abstract}{``Transmission Spectroscopy of the Earth-Sun System to Inform the Search for Extrasolar Life''}. \textit{The Planetary Science Journal}, 2(4), 140. 
                     \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., \& Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
-                    \item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2021, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
                     \item Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.5151M/abstract}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. \textit{Monthly Notices of the Royal Astronomical Society}.
                     \item Leung, M., Meadows, V. S., \& \textbf{Lustig-Yaeger, J.} (2020). \href{https://ui.adsabs.harvard.edu/abs/2020arXiv200413731L/abstract}{``High-Resolution Spectral Discriminants of Ocean Loss for M Dwarf Terrestrial Exoplanets''}. \textit{The Astronomical Journal}, 160(1), 11. 
                     \item Chouqar, J., Zouhair, B., Jabiri, A., \textbf{Lustig-Yaeger, J.}, Soubkiou, A., \& Szentgyorgyi, A. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.495..962C/abstract}{``Properties of Sub-Neptune Atmospheres: TOI-270 System''}. \textit{Monthly Notices of the Royal Astronomical Society}, 495(1), 962-970.
@@ -196,9 +199,10 @@ University of California, Santa Cruz, CA \\
                 %\end{benumerate}
                  
                  
-\section{Conference \\Presentations} 
+\section{Presentations} 
                 {\sl Invited Talks}
-                \begin{benumerate}{4}
+                \begin{benumerate}{5}
+                    \item \textbf{Lustig-Yaeger, J.} (2022). ``Rocky Exoplanet Characterization on the Path Towards Habitability and Biosignatures''. University of Maryland Planetary Astronomy Lunch Seminar Series, MD, Feb. 21
                     \item \textbf{Lustig-Yaeger, J.} \& Meadows, V. S.\ (2019). 
                     \href{https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/639372}{``The Era of Terrestrial Exoplanet Characterization''}. AGU, Joint AGU-AAS Session on Frontiers in Exoplanets, San Francisco, CA, 10 Dec. \href{https://www.youtube.com/watch?v=DDPguEQPPos}{\textit{Watch it on YouTube!}}
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P.\ (2019). \href{https://seec.gsfc.nasa.gov/Symposium.html}{``Prospects for Biosignatures for Rocky Planets in the Era of JWST''}. SEEC Symposium 2019, ``Rocky Exoplanets in the Era of JWST: Theory and Observation'', NASA Goddard, Greenbelt, MD, 5 Nov. 
