Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -160,7 +160,8 @@ University of California, Santa Cruz, CA \\
 
 \section{Publications} 
                 {\sl First Authored}
-                \begin{benumerate}{6}
+                \begin{benumerate}{7}
+                    \item \textbf{Lustig-Yaeger, J.} \& Fu, G., May, E. M., Ceballos, K. N., Moran, S. E., Peacock, S., Stevenson, K. B., Kirk, J., L\'opez-Morales, M., MacDonald, R. J., Mayorga, L. C., Sing, D. K., et al. (2023, \textit{submitted to Nature Astronomy}). \href{https://ui.adsabs.harvard.edu/abs/2023arXiv230104191L/abstract}{``A JWST transmission spectrum of a nearby Earth-sized exoplanet''}. \textit{arXiv preprint arXiv:2301.04191.}
                     \item \textbf{Lustig-Yaeger, J.}, Sotzen, K. S., Stevenson, K. B., Luger, R., May, E. M., Mayorga, L. C., Mandt, K., \& Izenberg, N. R. (2022). \href{https://doi.org/10.3847/1538-3881/ac5034}{``Hierarchical Bayesian Atmospheric Retrieval Modeling for Population Studies of Exoplanet Atmospheres: A Case Study on the Habitable Zone''}. \textit{The Astronomical Journal}, 163(3), 140. 
                     \item \textbf{Lustig-Yaeger, J.}, Stevenson, K. B., Mayorga, L. C., Sotzen, K. S., May, E. M., Izenberg, N. R., \& Mandt, K. (2021). \href{https://doi.org/10.3847/2041-8213/ac2cc2}{``Retrieving Exoplanet Atmospheres using Planetary Infrared Excess: Prospects for the Night side of WASP-43 b and other Hot Jupiters''}. \textit{The Astrophysical Journal Letters}, 921(1), L4.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the Cosmic Shoreline: Venus-like Clouds as a Statistical False Positive for Exoplanet Atmospheric Erosion''}. \textit{The Astrophysical Journal Letters}, 887(1), L11. 
@@ -169,11 +170,15 @@ University of California, Santa Cruz, CA \\
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., Tovar Mendoza, G., Schwieterman, E. W., Fujii, Y., Luger, R., \&  Robinson, T. D. (2018). \href{https://doi.org/10.3847/1538-3881/aaed3a}{``Detecting Ocean Glint on Exoplanets Using Multiphase Mapping''}. \textit{The Astronomical Journal}, 156(6), 301.
                 \end{benumerate}
                 {\sl Co-Authored}
-                \begin{benumerate}{21}
+                \begin{benumerate}{25}
                     %\item $^{\star}$Meadows, V. S., Lincowski, A. P., \& \textbf{Lustig-Yaeger, J.} (2022, $^{\star}$\textit{in prep}). \href{}{``The Feasibility of Detecting Biosignatures in the TRAPPIST-1 Planetary System with JWST''}. % \textit{AAS Journals}.
-                    \item Mandell, A. M., \textbf{Lustig-Yaeger, J.,} Stevenson, K., \& Staguhn, J. (2022). \href{https://doi.org/10.3847/1538-3881/ac83a5}{``MIRECLE: Science Yield for a Mid-IR Explorer-Class Mission to Study Non-Transiting Rocky Planets Orbiting the Nearest M-Stars Using Planetary Infrared Excess''}. \textit{The Astronomical Journal}, 164, 176. 
-                    \item Mandt, K., Luspay-Kuti, A., \textbf{Lustig-Yaeger, J.,} Felton, R., \& Domagal-Goldman, S. (2022). \href{https://iopscience.iop.org/article/10.3847/1538-4357/ac59bb}{``TRAPPIST-1h as an Exo-Titan. I. The Role of Assumptions about Atmospheric Parameters in Understanding an Exoplanet Atmosphere''}. \textit{The Astrophysical Journal}, 930(1), 73. 
-                    \item Wood, B. E., Hess, P., \textbf{Lustig‐Yaeger, J.}, Gallagher, B., Korwan, D., Rich, N., et al. (2022). \href{https://doi.org/10.1029/2021GL096302}{``Parker Solar Probe imaging of the night side of Venus''}. \textit{Geophysical Research Letters}, 49(3), e2021GL096302. 
+                    \item Ahrer, E. M., Stevenson, K. B., Mansfield, M. et al. (2023). \href{https://doi.org/10.1038/s41586-022-05590-4}{``Early Release Science of the exoplanet WASP-39b with JWST NIRCam''}. \textit{Nature} 614, 653-658. 
+                    \item Rustamkulov, Z., Sing, D. K., Mukherjee, S. et al. (2023). \href{https://doi.org/10.1038/s41586-022-05677-y}{``Early Release Science of the exoplanet WASP-39b with JWST NIRSpec PRISM''}. \textit{Nature} 614, 659-663. 
+                    \item JWST Transiting Exoplanet Community Early Release Science Team (2023). \href{https://doi.org/10.1038/s41586-022-05269-w}{``Identification of carbon dioxide in an exoplanet atmosphere''}. \textit{Nature} 614, 649-652. 
+                    \item Limbach, M. A., Vanderburg, A., Stevenson, K. B., Blouin, S., Morley, C., \textbf{Lustig-Yaeger, J.}, Soares-Furtado, M. and Janson, M., (2022). \href{https://doi.org/10.1093/mnras/stac2823}{``A new method for finding nearby white dwarfs exoplanets and detecting biosignatures''}. \textit{Monthly Notices of the Royal Astronomical Society}, 517(2), pp.2622-2638.
+                    \item Mandell, A. M., \textbf{Lustig-Yaeger, J.}, Stevenson, K., \& Staguhn, J. (2022). \href{https://doi.org/10.3847/1538-3881/ac83a5}{``MIRECLE: Science Yield for a Mid-IR Explorer-Class Mission to Study Non-Transiting Rocky Planets Orbiting the Nearest M-Stars Using Planetary Infrared Excess''}. \textit{The Astronomical Journal}, 164, 176. 
+                    \item Mandt, K., Luspay-Kuti, A., \textbf{Lustig-Yaeger, J.}, Felton, R., \& Domagal-Goldman, S. (2022). \href{https://iopscience.iop.org/article/10.3847/1538-4357/ac59bb}{``TRAPPIST-1h as an Exo-Titan. I. The Role of Assumptions about Atmospheric Parameters in Understanding an Exoplanet Atmosphere''}. \textit{The Astrophysical Journal}, 930(1), 73. 
+                    \item Wood, B. E., Hess, P., \textbf{Lustig-Yaeger, J.}, Gallagher, B., Korwan, D., Rich, N., et al. (2022). \href{https://doi.org/10.1029/2021GL096302}{``Parker Solar Probe imaging of the night side of Venus''}. \textit{Geophysical Research Letters}, 49(3), e2021GL096302. 
                     \item Komacek, T. D., Kang, W., \textbf{Lustig-Yaeger, J.}, \& Olson, S. L. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021arXiv210808386K/abstract}{``Constraining the Climates of Rocky Exoplanets''}. \textit{Elements}, 17, 4.
                     \item Mayorga, L. C., \textbf{Lustig-Yaeger, J.}, May, E. M., Sotzen, K. S., Gonzalez-Quiles, J., et al. (2021) \href{https://ui.adsabs.harvard.edu/abs/2021PSJ.....2..140M/abstract}{``Transmission Spectroscopy of the Earth-Sun System to Inform the Search for Extrasolar Life''}. \textit{The Planetary Science Journal}, 2(4), 140. 
                     \item Kopparapu, R., Arney, G., Haqq-Misra, \textbf{J., Lustig-Yaeger}, J., \& Villanueva, G. (2021). \href{https://ui.adsabs.harvard.edu/abs/2021ApJ...908..164K/abstract}{``Nitrogen dioxide pollution as a signature of extraterrestrial technology''}. \textit{The Astrophysical Journal}, 908(2), 164.
@@ -235,12 +240,14 @@ University of California, Santa Cruz, CA \\
                  
  \section{Public Talks}
                 \begin{itemize}  
+                    \item ``How Astronomers are Searching for Life on Planets Outside of the Solar System'' Western Institute for Lifelong Learning, Silver City, NM. November 10, 2022. 
                     \item ``Proxima Centauri b: A World of Possibilities'' and panel discussion with Guillem Anglada-Escude, Rory Barnes, \& Olivier Guyon, UW Astrobiology \& the NASA Astrobiology Institute Lecture Series, Seattle, WA. May 3, 2017.
                     \item ``BREAKING: Terrestrial Exoplanet Discovered in the Habitable Zone of Proxima Centauri'' Astronomy on Tap, Peddler Brewing Company, Seattle, WA. August 24, 2016.\\
                  \end{itemize}
                  
 \section{Press}
                 \begin{itemize}  
+                    \item Johns Hopkins Applied Physics Lab, Laurel, MD. (2023, January 11). \href{https://www.jhuapl.edu/news/news-releases/230111b-nasa-webb-and-apl-identify-telescope-first-rocky-exoplanet}{``NASA's Webb Identifies Its First Exoplanet — And It's the Size of Earth''} [Press release].
                     \item University of Washington, Seattle. (2019, August 13). \href{https://www.washington.edu/news/2019/08/13/james-webb-space-telescope-could-begin-learning-about-trappist-1-atmospheres-in-a-single-year-study-indicates/}{``James Webb Space Telescope could begin learning about TRAPPIST-1 atmospheres in a single year, study indicates''} [Press release]. 
                  \end{itemize}
 
