--- a/cv_for_XRP22_1pg.tex
+++ b/cv_for_XRP22_1pg.tex
@@ -113,7 +113,7 @@ University of California, Santa Cruz, CA \\
 \section{Selected Publications} 
                 %{\sl First Authored}
                 \begin{itemize}
-                    \item \textbf{Lustig-Yaeger, J.}, Sotzen, K. S., Stevenson, K. B., Luger, R., May, E. M., Mayorga, L. C., Mandt, K., \& Izenberg, N. R. (2022). \href{https://ui.adsabs.harvard.edu/abs/2022arXiv220200701L/abstract}{``Hierarchical Bayesian Atmospheric Retrieval Modeling for Population Studies of Exoplanet Atmospheres: A Case Study on the Habitable Zone''}. \textit{The Astronomical Journal}.
+                    \item \textbf{Lustig-Yaeger, J.}, Sotzen, K. S., Stevenson, K. B., Luger, R., May, E. M., Mayorga, L. C., Mandt, K., \& Izenberg, N. R. (2022). \href{https://doi.org/10.3847/1538-3881/ac5034}{``Hierarchical Bayesian Atmospheric Retrieval Modeling for Population Studies of Exoplanet Atmospheres: A Case Study on the Habitable Zone''}. \textit{The Astronomical Journal}, 163(3), 140. 
                     \item \textbf{Lustig-Yaeger, J.}, Stevenson, K. B., Mayorga, L. C., Sotzen, K. S., May, E. M., Izenberg, N. R., \& Mandt, K. (2021). \href{https://doi.org/10.3847/2041-8213/ac2cc2}{``Retrieving Exoplanet Atmospheres using Planetary Infrared Excess: Prospects for the Night side of WASP-43 b and other Hot Jupiters''}. \textit{The Astrophysical Journal Letters}, 921(1), L4.
                     %\item Mansfield, M., Schlawin, E., \textbf{Lustig-Yaeger, J.}, et al. (2020). \href{https://ui.adsabs.harvard.edu/abs/2020MNRAS.499.5151M/abstract}{``Eigenspectra: A Framework for Identifying Spectra from 3D Eclipse Mapping''}. \textit{Monthly Notices of the Royal Astronomical Society}.
                     \item \textbf{Lustig-Yaeger, J.}, Meadows, V. S., \& Lincowski, A. P. (2019). \href{https://doi.org/10.3847/2041-8213/ab5965}{``A Mirage of the Cosmic Shoreline: Venus-like Clouds as a Statistical False Positive for Exoplanet Atmospheric Erosion''}. \textit{The Astrophysical Journal Letters}, 887(1), L11. 
